--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "External/ReactiveCocoa"]
 	path = External/ReactiveCocoa
 	url = https://github.com/ReactiveCocoa/ReactiveCocoa.git
+[submodule "External/specta"]
+	path = External/specta
+	url = https://github.com/specta/specta.git
+[submodule "External/expecta"]
+	path = External/expecta
+	url = https://github.com/specta/expecta.git
