--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "External/expecta"]
 	path = External/expecta
 	url = https://github.com/specta/expecta.git
+[submodule "External/ocmock"]
+	path = External/ocmock
+	url = https://github.com/erikdoe/ocmock.git
